--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </script>
 
   <div class="content">
-    <h1>Hường ơi… anh thích em rồi!</h1>
+    <h1>Kiều ơi… anh thích em rồi!</h1>
     <p>
       Em không cần trả lời ngay đâu.<br>
       Anh chỉ muốn em biết:<br>
