--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dành Riêng Cho Kiều</title>
+  <title>Dành Riêng Cho Linh</title>
   <style>
     * {
       margin: 0;
@@ -109,7 +109,7 @@
   </script>
 
   <div class="content">
-    <h1>Kiều ơi… anh thích em rồi!</h1>
+    <h1>Linh ơi… anh thích em rồi!</h1>
     <p>
       Em không cần trả lời ngay đâu.<br>
       Anh chỉ muốn em biết:<br>
